Add register maceration use case (#5)
* Add register maceration use case

* remove commented code
